Fixed Filter Ui and added text-overflow for itemName

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,19 @@ input:-webkit-autofill:active {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+body {
+  @apply leading-[normal] m-0;
+}
+*,
+::before,
+::after {
+  border-width: 0;
+}
 .bganim {
   background: linear-gradient(
     60deg,
